# WL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  azure.md  claude_memory.md  context_final.md  docker-compose.yml  flowchart.txt  implementation_plan.md  interakt_apis.md  interakt_webhook.md  memory.md  models.txt  pyproject.toml  verify_schema.sql
.github/: instructions.md
docker/: Dockerfile
docker/entrypoints/: api.sh  status_worker.sh  worker.sh
migrations/: env.py
migrations/versions/: 20260508_0001_init_init_schema.py  20260510_0002_add_mci_id.py  20260518_0003_remove_partial_registration.py
scripts/: db_inspect.py  drive_webhook.py  remove_partial_registration_schema.sql  seed_doctors.py  seed_state.py
src/wabot/: __init__.py  main.py
src/wabot/adapters/: __init__.py
src/wabot/adapters/broker/: __init__.py  azure_servicebus.py  base.py  factory.py  redis_streams.py
src/wabot/adapters/genai/: __init__.py  fake.py
src/wabot/adapters/interakt/: __init__.py  client.py  normalizer.py
src/wabot/api/: __init__.py
src/wabot/api/routers/: health.py  metrics.py  webhooks.py
src/wabot/api/schemas/: __init__.py  interakt_webhook.py
src/wabot/cache/: __init__.py  client.py  dedupe.py  locks.py
src/wabot/data/: __init__.py  base.py  db.py
src/wabot/data/models/: __init__.py  _columns.py  consent.py  conversation.py  doctor.py  genai.py  journey.py  onboarding.py  outbound.py  registration.py  webhook.py
src/wabot/data/repositories/: __init__.py  consent_repo.py  conversation_repo.py  doctor_repo.py  journey_repo.py  onboarding_repo.py  outbound_repo.py  webhook_repo.py
src/wabot/domain/: __init__.py  enums.py  events.py  outbound.py  router.py
src/wabot/domain/journeys/: __init__.py  base.py  registered.py  registration.py  status.py
src/wabot/domain/messages/: __init__.py  builder.py  catalog.py
src/wabot/domain/parsers/: __init__.py  registration.py
src/wabot/domain/ports/: __init__.py  genai.py
src/wabot/infra/: __init__.py  config.py  correlation.py  errors.py  logging.py  metrics.py  telemetry.py
src/wabot/services/: __init__.py  orchestrator.py  outbound_pipeline.py
src/wabot/workers/: __init__.py  inbound_worker.py  status_worker.py
tests/: conftest.py
tests/unit/: test_broker_redis_streams.py  test_cache.py  test_config.py  test_conversation_repo.py  test_correlation.py  test_db.py  test_errors.py  test_genai_port.py  test_health.py  test_interakt_client.py  test_interakt_schema.py  test_locks.py  test_logging.py  test_messages_builder.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_outbound_intent.py  test_outbound_pipeline.py  test_outbound_status_handler.py  test_registered_journey.py  test_registration_journey.py  test_registration_parser.py  test_router.py  test_seed_doctors.py  test_webhooks.py
